# very-large-repos

./: Cargo.toml  README.md
src/: main.rs  stream.rs
