[package]
name = "very-large-repos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = { version = "0.30.1", features = ["stream", "rustls-webpki-tokio"] }
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["macros"] }
futures = "0.3.28"
once_cell = "1.18.0"
gix = "0.53.1"
indicatif = "0.17.6"

http = "0.2.9"
hyper = "0.14.27"
serde = "1.0.188"
url = "2.4.1"
async-trait = "0.1.73"
serde_json = "1.0.107"
snafu = "0.7.5"

ansi_term = "0.12.1"
tracing = "0.1.37"
tracing-indicatif = "0.3.5"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
governor = "0.6.0"
